--- a/app/src/main/res/layout/activity_launch_screen.xml
+++ b/app/src/main/res/layout/activity_launch_screen.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/transparent"
+    android:layoutDirection="ltr"
     tools:context=".activity.LaunchScreenActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
