--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -51,5 +51,10 @@
     </style>
 
 
+    <style name="AppButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
 
 </resources>
