--- a/app/src/main/res/layout/activity_internet.xml
+++ b/app/src/main/res/layout/activity_internet.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:layoutDirection="ltr"
     tools:context=".activity.InternetActivity">
 
     <LinearLayout
@@ -54,8 +55,19 @@
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
+
+    <TextView
+        android:textSize="9sp"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/test12"
+        android:id="@+id/filteredDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="7dp"
+        app:layout_constraintTop_toBottomOf="@+id/filteredDateTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +82,7 @@
         android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/test12"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
