--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,20 @@
     android:layout_height="match_parent"
     android:background="@color/color3"
     android:orientation="vertical"
+    android:layoutDirection="ltr"
+    android:weightSum="9"
     tools:context=".activity.MainActivity">
 
 
     <LinearLayout
+        android:layout_weight="4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@drawable/test3"
-        android:paddingBottom="10dp"
         android:orientation="vertical">
         
         <LinearLayout
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="0dp"
             android:paddingHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -25,9 +27,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginVertical="8dp"
+                android:layout_marginHorizontal="16dp"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="5dp"
+                app:cardElevation="4dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardUseCompatPadding="true"
                 app:cardPreventCornerOverlap="false">
@@ -48,9 +51,10 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginVertical="8dp"
+                android:layout_marginHorizontal="16dp"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="5dp"
+                app:cardElevation="4dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardUseCompatPadding="true"
                 app:cardPreventCornerOverlap="false">
@@ -67,15 +71,17 @@
         </LinearLayout>
 
         <androidx.viewpager.widget.ViewPager
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="4dp"
             android:id="@+id/viewPagerMaina"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
+            android:layout_weight="1"
+            android:layout_height="0dp"
             android:nestedScrollingEnabled="true"
             android:scrollIndicators="bottom"/>
 
         <me.relex.circleindicator.CircleIndicator
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="2dp"
+            android:layout_marginTop="3dp"
             android:id="@+id/indicator"
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -85,31 +91,13 @@
 
     </LinearLayout>
 
-    <GridView
-        android:visibility="gone"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:id="@+id/gridView"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:numColumns="3"
-        android:verticalSpacing="20dp"
-        android:horizontalSpacing="20dp"
-        android:paddingHorizontal="8dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="20dp"/>
-
-
-
-
-
     <ScrollView
+        android:layout_weight="5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <LinearLayout
-            android:paddingVertical="20dp"
+            android:paddingVertical="10dp"
             android:paddingHorizontal="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -139,8 +127,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -196,8 +184,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -253,8 +241,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -318,8 +306,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -375,8 +363,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -432,8 +420,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -498,8 +486,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -555,8 +543,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -612,8 +600,8 @@
                         android:orientation="vertical">
 
                         <FrameLayout
-                            android:layout_width="45dp"
-                            android:layout_height="45dp">
+                            android:layout_width="40dp"
+                            android:layout_height="40dp">
 
 
                             <ProgressBar
@@ -651,24 +639,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-
-        <LinearLayout
-            android:paddingVertical="20dp"
-            android:paddingHorizontal="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-
-
-
-
-
-
-        </LinearLayout>
-
-
 
 
 </LinearLayout>
