--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:layoutDirection="ltr"
     tools:context=".activity.ProfileActivity">
 
 
@@ -59,7 +60,7 @@
                     android:text="Profile"/>
 
                 <androidx.cardview.widget.CardView
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -67,10 +68,11 @@
                     app:cardElevation="8dp">
 
                     <ImageView
+                        android:padding="5dp"
                         android:id="@+id/notificationImageView"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:src="@drawable/notification_icon" />
+                        android:src="@drawable/baseline_manage_accounts_24" />
 
                 </androidx.cardview.widget.CardView>
 
