--- a/app/src/main/res/layout/grid_view_columnist_activity.xml
+++ b/app/src/main/res/layout/grid_view_columnist_activity.xml
@@ -18,9 +18,9 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-            android:scaleType="centerCrop"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:scaleType="centerCrop"
                 android:id="@+id/journalistImageView"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded2"/>
 
@@ -44,7 +44,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:textSize="15sp"
+                        android:textSize="13sp"
                         android:id="@+id/mediaNameTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -66,17 +66,17 @@
                         android:textStyle="bold"
                         android:text="Test"
                         android:textColor="#16456F"
-                        android:textSize="15sp" />
+                        android:textSize="13sp" />
 
                 </LinearLayout>
 
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/shareCardView"
-                    android:layout_width="32dp"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     app:cardCornerRadius="45dp"
                     android:layout_marginHorizontal="5dp"
                     app:cardElevation="2dp">
@@ -130,11 +130,11 @@
 
 
             <TextView
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="3dp"
                 android:id="@+id/titleTextView"
-                android:textSize="10sp"
+                android:textSize="9sp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:textStyle="bold"
                 android:text="Candan yücem ödüllendirildi Eren Erdem
 fena dalga geçti"
