--- a/app/src/main/res/layout/item_layout_media_agenda_body.xml
+++ b/app/src/main/res/layout/item_layout_media_agenda_body.xml
@@ -9,8 +9,8 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_margin="2dp"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_gravity="center"
         app:cardCornerRadius="10dp">
 
@@ -32,7 +32,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,15 +48,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="start"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:ellipsize="end"
-            android:maxLines="3"
+            android:maxLines="2"
             android:textStyle="bold"
             android:text="Test"
             android:textColor="@color/black"
-            android:textSize="15sp"
-            />
+            android:textSize="13sp" />
 
         <LinearLayout
             android:paddingHorizontal="10dp"
@@ -68,7 +67,7 @@
             <LinearLayout
                 android:id="@+id/watchLinearLayout"
                 android:paddingHorizontal="10dp"
-                android:paddingVertical="5dp"
+                android:paddingVertical="2dp"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,7 +81,7 @@
 
                 <TextView
                     android:layout_marginStart="4dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="İzle"
@@ -100,7 +99,7 @@
             <LinearLayout
                 android:id="@+id/readMoreLinearLayout"
                 android:paddingHorizontal="10dp"
-                android:paddingVertical="5dp"
+                android:paddingVertical="2dp"
                 android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -114,7 +113,7 @@
 
                 <TextView
                     android:layout_marginStart="4dp"
-                    android:textSize="12sp"
+                    android:textSize="10sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Devamini oku"
