--- a/app/src/main/res/layout/web_view_layout.xml
+++ b/app/src/main/res/layout/web_view_layout.xml
@@ -17,7 +17,7 @@
 
         <ImageView
             android:layout_marginVertical="16dp"
-            android:id="@+id/backIconImageView"
+            android:id="@+id/backIconImageView2"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
