--- a/app/src/main/res/layout/activity_columnists.xml
+++ b/app/src/main/res/layout/activity_columnists.xml
@@ -44,17 +44,27 @@
             app:cardElevation="8dp">
 
             <ImageView
-                android:id="@+id/notificationImageView"
+                android:id="@+id/filterImageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/notification_icon" />
+                android:padding="4dp"
+                android:src="@drawable/baseline_filter_alt_24" />
 
         </androidx.cardview.widget.CardView>
 
+
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
+    <TextView
+        android:textSize="9sp"
+        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@+id/test12"
+        android:id="@+id/filteredDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@+id/filteredDateTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,5 +73,17 @@
         android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="1" />
+
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
