--- a/app/src/main/res/layout/activity_media_agenda.xml
+++ b/app/src/main/res/layout/activity_media_agenda.xml
@@ -70,7 +70,7 @@
             android:layout_gravity="end"
             android:textSize="15sp"
             android:textColor="@color/black"
-            android:text="Hepsini Gör"/>
+            android:text="Tümünü Gör"/>
 
 
 
