--- a/app/src/main/res/layout/activity_newspaper.xml
+++ b/app/src/main/res/layout/activity_newspaper.xml
@@ -38,7 +38,7 @@
             android:text="Gazeteler"/>
 
         <androidx.cardview.widget.CardView
-            android:visibility="visible"
+            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
