--- a/app/src/main/res/layout/activity_visual_media_details_activity.xml
+++ b/app/src/main/res/layout/activity_visual_media_details_activity.xml
@@ -36,7 +36,7 @@
             android:text="@string/visual_media"/>
 
         <androidx.cardview.widget.CardView
-            android:visibility="visible"
+            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
