--- a/app/src/main/res/layout/activity_columnists_show.xml
+++ b/app/src/main/res/layout/activity_columnists_show.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
-        app:layout_constraintBottom_toTopOf="@+id/linear"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,20 +31,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
 
-
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="50dp"
+        android:background="#33FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
 
 
         <ImageView
+            android:layout_marginStart="10dp"
             android:id="@+id/leftArrowImageView"
-            android:padding="10dp"
+            android:padding="15dp"
             android:layout_gravity="center_vertical"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -57,13 +57,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:text="1/20"
             android:layout_weight="1"/>
 
         <ImageView
+            android:layout_marginEnd="10dp"
             android:id="@+id/rightArrowImageView"
-            android:padding="10dp"
+            android:padding="15dp"
             android:layout_gravity="center_vertical"
             android:layout_width="50dp"
             android:layout_height="50dp"
@@ -75,5 +76,49 @@
 
 
     </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linear"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:layout_marginHorizontal="20dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent" >-->
+
+
+<!--        <ImageView-->
+<!--            android:id="@+id/leftArrowImageView"-->
+<!--            android:padding="10dp"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@drawable/left_arrow"-->
+<!--            app:tint="@color/black"-->
+<!--            tools:ignore="RtlSymmetry" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/text"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center"-->
+<!--            android:textSize="18sp"-->
+<!--            android:text="1/20"-->
+<!--            android:layout_weight="1"/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/rightArrowImageView"-->
+<!--            android:padding="10dp"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@drawable/right_arrow"-->
+<!--            app:tint="@color/black"-->
+<!--            tools:ignore="RtlSymmetry" />-->
+
+
+
+
+<!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
