--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
             android:textSize="15sp"
             android:id="@+id/edit_username"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:inputType="text|textCapWords"
             android:maxLines="1"
             android:textColor="@color/color2"
@@ -106,7 +106,7 @@
             android:textSize="15sp"
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="55dp"
             android:inputType="text|textCapWords"
             android:maxLines="1"
             android:textColor="@color/color2"
@@ -117,9 +117,47 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
+    <LinearLayout
+        android:layout_marginHorizontal="17dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/resetPasswordTextView"
+            android:paddingHorizontal="4dp"
+            android:paddingVertical="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color6"
+            android:layout_marginTop="0dp"
+            android:textSize="10sp"
+            android:text="Şifreni mi Unuttun ?"/>
+
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/registerTextView"
+            android:paddingHorizontal="4dp"
+            android:paddingVertical="3dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color6"
+            android:layout_marginTop="0dp"
+            android:textSize="10sp"
+            android:text="Abone ol"/>
+
+    </LinearLayout>
+
+
+
     <com.google.android.material.button.MaterialButton
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:paddingVertical="10dp"
         android:id="@+id/loginMaterialButton"
         android:layout_gravity="center"
