--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -8,22 +8,66 @@
     android:layoutDirection="ltr"
     tools:context=".activity.NotificationActivity">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/test12"
         android:layout_marginTop="20dp"
-        android:id="@+id/myAccount"
+        android:paddingHorizontal="0dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Notifications"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:layout_marginStart="20dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/backIconImageView"
+            android:padding="5dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/left_arrow_blue" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textColor="#4E4B66"
+            android:text="Bildirimler"/>
+
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:visibility="visible"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="16dp"-->
+<!--            app:cardCornerRadius="8dp"-->
+<!--            app:cardElevation="8dp">-->
+
+
+<!--            <ImageView-->
+<!--                android:id="@+id/notificationImageView"-->
+<!--                android:layout_width="40dp"-->
+<!--                android:layout_height="40dp"-->
+<!--                android:src="@drawable/notification_icon" />-->
+
+            <Button
+                android:layout_marginEnd="5dp"
+                android:textAllCaps="false"
+                android:layout_gravity="center"
+                android:id="@+id/okundu"
+                android:text="Hepsi\nokundu."
+                android:textSize="10sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+
+<!--        </androidx.cardview.widget.CardView>-->
+
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@+id/myAccount"
+        app:layout_constraintTop_toBottomOf="@+id/test12"
         app:layout_constraintBottom_toTopOf="@+id/frameLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +106,7 @@
         android:layout_height="wrap_content">
 
         <Button
+            android:textAllCaps="false"
             android:layout_gravity="center"
             android:id="@+id/button"
             android:text="Daha fazla yükle"
