--- a/app/src/main/res/layout/activity_notification_content.xml
+++ b/app/src/main/res/layout/activity_notification_content.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/white"
-    android:layoutDirection="ltr"
-    tools:context=".activity.MediaReportActivity">
+    tools:context=".activity.NotificationContentActivity">
+
 
     <LinearLayout
         android:id="@+id/test12"
@@ -29,16 +27,17 @@
             android:src="@drawable/left_arrow_blue" />
 
         <TextView
+            android:visibility="invisible"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="Medya Raporu"/>
+            android:text="Bildirimler"/>
 
         <androidx.cardview.widget.CardView
-            android:visibility="visible"
+            android:id="@+id/notificationImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -46,46 +45,58 @@
             app:cardElevation="8dp">
 
             <ImageView
-                android:id="@+id/filterImageView"
+                android:padding="5dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:padding="4dp"
-                android:src="@drawable/baseline_filter_alt_24" />
+                android:src="@drawable/baseline_link_24" />
 
         </androidx.cardview.widget.CardView>
 
-
     </LinearLayout>
 
-    <TextView
-        android:textSize="9sp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/test12"
-        android:id="@+id/filteredDateTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/filteredDateTextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+    <TextView
+        android:layout_marginHorizontal="30dp"
+        android:id="@+id/titleTextView"
+        app:layout_constraintTop_toBottomOf="@+id/test12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="1" />
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/color6"
+        android:text="Title"/>
 
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:visibility="gone"
+    <TextView
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="20dp"
+        android:id="@+id/bodyTextView"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="start"
+        android:textSize="20sp"
+        android:textColor="#4E4B66"
+        android:text="Body"/>
+
+
+    <Button
+        android:layout_marginBottom="10dp"
+        android:textAllCaps="false"
+        android:layout_gravity="center"
+        android:id="@+id/button"
+        android:text="Okundu olarak işaretle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
