--- a/app/src/main/res/layout/activity_sub_newspaper.xml
+++ b/app/src/main/res/layout/activity_sub_newspaper.xml
@@ -2,68 +2,75 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingVertical="20dp"
+    android:paddingVertical="0dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:layoutDirection="ltr"
     tools:context=".activity.SubNewspaperActivity">
 
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginVertical="5dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="2dp"
+    <com.example.mtm.util.ZoomClass
+        android:layout_gravity="center"
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/linear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-<!--        <com.jsibbold.zoomage.ZoomageView-->
-<!--                android:id="@+id/imageView"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_gravity="center" />-->
-
-
-        <com.example.mtm.util.ZoomClass
-            android:layout_gravity="center"
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 
-        <ProgressBar
-            android:layout_gravity="center"
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <ProgressBar
+        android:layout_gravity="center"
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 
-    </androidx.cardview.widget.CardView>
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:id="@+id/cardView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_marginHorizontal="10dp"-->
+<!--        android:layout_marginVertical="5dp"-->
+<!--        app:cardCornerRadius="8dp"-->
+<!--        app:cardElevation="2dp"-->
+<!--       >-->
+
+
+<!--&lt;!&ndash;        <com.jsibbold.zoomage.ZoomageView&ndash;&gt;-->
+<!--&lt;!&ndash;                android:id="@+id/imageView"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
+<!--&lt;!&ndash;                android:layout_gravity="center" />&ndash;&gt;-->
+
+
+<!--    -->
+
+
+
+<!--    </androidx.cardview.widget.CardView>-->
 
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_height="50dp"
+        android:background="#33FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
 
 
             <ImageView
+                android:layout_marginStart="10dp"
                 android:id="@+id/leftArrowImageView"
-                android:padding="10dp"
+                android:padding="15dp"
                 android:layout_gravity="center_vertical"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -76,13 +83,14 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:text="1/20"
             android:layout_weight="1"/>
 
             <ImageView
+                android:layout_marginEnd="10dp"
                 android:id="@+id/rightArrowImageView"
-              android:padding="10dp"
+                android:padding="15dp"
                 android:layout_gravity="center_vertical"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
