--- a/app/src/main/res/layout/item_layout_media_agenda_body.xml
+++ b/app/src/main/res/layout/item_layout_media_agenda_body.xml
@@ -97,6 +97,7 @@
                 android:layout_weight="1"/>
 
             <LinearLayout
+                android:visibility="invisible"
                 android:id="@+id/readMoreLinearLayout"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="2dp"
