--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -57,7 +57,7 @@
                     android:layout_weight="1"
                     android:textSize="20sp"
                     android:textColor="#4E4B66"
-                    android:text="Profile"/>
+                    android:text="Profil"/>
 
                 <androidx.cardview.widget.CardView
                     android:visibility="visible"
