--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="color4">#174670</color>
     <color name="color5">#7587AA</color>
     <color name="color6">#D88030</color>
+    <color name="color7">#F2F3F4</color>
 
 </resources>
