--- a/app/src/main/res/drawable/baseline_filter_alt_24.xml
+++ b/app/src/main/res/drawable/baseline_filter_alt_24.xml
@@ -1,5 +1,9 @@
-<vector android:height="24dp"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#16456F" android:pathData="M4.25,5.61C6.27,8.2 10,13 10,13v6c0,0.55 0.45,1 1,1h2c0.55,0 1,-0.45 1,-1v-6c0,0 3.72,-4.8 5.74,-7.39C20.25,4.95 19.78,4 18.95,4H5.04C4.21,4 3.74,4.95 4.25,5.61z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="32dp"
+    android:height="32dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+  <path
+      android:fillColor="#16456F"
+      android:pathData="M2,7h0.142a3.981,3.981 0,0 0,7.716 0L30,7a1,1 0,0 0,0 -2L9.858,5a3.981,3.981 0,0 0,-7.716 0L2,5a1,1 0,0 0,0 2zM6,4a2,2 0,1 1,-2 2,2 2,0 0,1 2,-2zM30,15h-0.142a3.981,3.981 0,0 0,-7.716 0L2,15a1,1 0,0 0,0 2h20.142a3.981,3.981 0,0 0,7.716 0L30,17a1,1 0,0 0,0 -2zM26,18a2,2 0,1 1,2 -2,2 2,0 0,1 -2,2zM30,25L19.858,25a3.981,3.981 0,0 0,-7.716 0L2,25a1,1 0,0 0,0 2h10.142a3.981,3.981 0,0 0,7.716 0L30,27a1,1 0,0 0,0 -2zM16,28a2,2 0,1 1,2 -2,2 2,0 0,1 -2,2z"/>
 </vector>
