--- a/app/src/main/res/layout/activity_mesut.xml
+++ b/app/src/main/res/layout/activity_mesut.xml
@@ -8,47 +8,7 @@
     tools:context=".activity.MesutActivity">
 
 
-    <LinearLayout
-        android:id="@+id/yaser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/tumSayfa"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
-            android:text="Sayfayı Gör"
-            android:textColor="@color/color3"
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/paylas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
-            android:text="Paylas"
-            android:textColor="@color/color3"
-            android:textSize="20sp" />
-
-
-    </LinearLayout>
 
 
     <com.example.mtm.util.ZoomClass
@@ -60,43 +20,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yaser"
-        app:layout_constraintVertical_bias="0.5" />
-
-    <LinearLayout
-        android:visibility="gone"
-        android:paddingVertical="3dp"
-        android:background="#CC000000"
-        android:id="@+id/hamdo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yaser">
-
-        <TextView
-            android:layout_gravity="center"
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tüm sayfa"
-            android:textColor="@color/color6"
-            android:textStyle="bold"
-            android:textSize="20sp" />
-
-        <TextView
-            android:layout_gravity="center"
-            android:id="@+id/tarih"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Paylas"
-            android:textColor="@color/color6"
-            android:textSize="12sp" />
-
-
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        android:contentDescription="Todo"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -107,8 +33,80 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yaser"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
+
+
+    <LinearLayout
+        android:visibility="invisible"
+        android:background="#CC000000"
+        android:id="@+id/hamdo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <ImageView
+            android:layout_marginVertical="10dp"
+            android:id="@+id/paylas"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical|start"
+            android:padding="4dp"
+            android:src="@drawable/share_icon"/>
+
+
+        <TextView
+            android:layout_weight="2"
+            android:id="@+id/name"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Kaynak"
+            android:textColor="#FFFFFF"
+            android:textSize="13sp" />
+
+
+<!--        <ImageView-->
+<!--            android:visibility="gone"-->
+<!--            android:layout_marginVertical="10dp"-->
+<!--            android:id="@+id/cancel"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:src="@drawable/baseline_cancel_24"/>-->
+
+
+        <TextView
+            android:layout_gravity="center_vertical|end"
+            android:id="@+id/tumSayfa"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:layout_height="wrap_content"
+            android:text="Sayfayı Gör"
+            android:textColor="#226DAF"
+            android:textSize="13sp"/>
+
+        <ImageView
+            android:visibility="gone"
+            android:layout_marginVertical="10dp"
+            android:id="@+id/cancel"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical|start"
+            android:padding="4dp"
+            android:src="@drawable/baseline_cancel_24"/>
+
+
+    </LinearLayout>
 
 
     <LinearLayout
