--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -10,7 +10,6 @@
 
     <LinearLayout
         android:id="@+id/test12"
-        android:layout_marginTop="20dp"
         android:paddingHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +36,6 @@
             android:text="Haber Listesi"/>
 
         <androidx.cardview.widget.CardView
-            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -48,16 +46,25 @@
                 android:id="@+id/notificationImageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/notification_icon" />
+                android:padding="6dp"
+                android:src="@drawable/baseline_filter_alt_24" />
 
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
+    <TextView
+        android:textSize="14sp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/test12"
+        android:id="@+id/filteredDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:id="@+id/test124"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/test12"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/filteredDateTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -183,6 +190,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/test124"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -193,5 +201,15 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="1" />
 
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
