--- a/app/src/main/res/layout/activity_newspaper.xml
+++ b/app/src/main/res/layout/activity_newspaper.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:id="@+id/test12"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:paddingHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,6 +29,7 @@
             android:src="@drawable/left_arrow_blue" />
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -38,7 +39,7 @@
             android:text="Gazeteler"/>
 
         <androidx.cardview.widget.CardView
-            android:visibility="invisible"
+            android:visibility="visible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
@@ -46,14 +47,24 @@
             app:cardElevation="8dp">
 
             <ImageView
-                android:id="@+id/notificationImageView"
+                android:id="@+id/filterImageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/notification_icon" />
+                android:padding="6dp"
+                android:src="@drawable/baseline_filter_alt_24" />
 
         </androidx.cardview.widget.CardView>
 
+
     </LinearLayout>
+
+    <TextView
+        android:textSize="14sp"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/test12"
+        android:id="@+id/filteredDateTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <GridView
         android:visibility="gone"
@@ -68,9 +79,19 @@
         android:padding="8dp"/>
 
 
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/test12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@+id/test12"
+        app:layout_constraintTop_toBottomOf="@+id/filteredDateTextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
