--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -77,4 +77,19 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+
+
+
+
+
+
+
+
+    <style name="BottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/bottomSheetStyleWrapper</item>
+    </style>
+
+    <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
 </resources>
